--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,27 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+<!--{% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %}-->
+
+## Teaching Experience
+
+### Université Saint-Joseph de Beyrouth, Faculty of Engineering (ESIB) - 2016 to 2019
+
+During my years as a PhD. student, I taught the following courses at the Faculty of Engineering, Université Saint-Joseph de Beyrouth:
+
+| Course                     | Nature          | Total Hours | Overview                                                                                                             |
+|----------------------------|-----------------|-------------|----------------------------------------------------------------------------------------------------------------------|
+| Object Oriented Programming (C++) | Engineering and Computer Science | 105 hours | Mainly C++, included practical work on arrays, vectors, functions, classes, inheritance, and polymorphism.        |
+| Routing and Switching      | Engineering     | 12 hours    | Introduction to network layers, TCP/IP, functionalities of layer 2 and 3 switches, and routing protocols.           |
+| Linux OS                   | Engineering     | 12 hours    | Introduction to Linux fundamentals, CLI commands, bash scripts, and others.                                          |
+| Analog Electronics         | Engineering     | 20 hours    | Design and implementation of analog circuits with basic functionalities.                                               |
+| Miscellaneous Lab Classes  | Engineering     | 20 hours    | Exercises on Microsoft Biztlak and Unified Modeling Language (UML).                                                   |
+
+### More Recently
+
+I have also been instructing a part of the course "Virtual Networks" for FIPA 2nd year students at Telecom SudParis and Master students at Telecom Paris. This section of the course introduces students to SD-WAN networks, Docker, Kubernetes, and incorporates lab work.
+
