--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,7 +5,27 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+
+
+# Under Construction 🚧
+
+![Under Construction](https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif)
+
+## Oops! This Page is Still Under Construction
+
+### We're working hard to bring you something awesome. Please check back later!
+
+In the meantime, feel free to explore the other sections of my website.
+
+Thank you for your patience! 🙏
+
+
+
+
+
+
+
+<!--{% if site.talkmap_link == true %}
 
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
@@ -13,4 +33,4 @@ author_profile: true
 
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
-{% endfor %}
+{% endfor %}-->
